[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/star/star.png" type="Texture" id=1]
[ext_resource path="res://src/star/Star.gd" type="Script" id=2]
[ext_resource path="res://src/states/Throwing.gd" type="Script" id=3]
[ext_resource path="res://src/states/Flailing.gd" type="Script" id=4]
[ext_resource path="res://src/states/Flying.gd" type="Script" id=5]
[ext_resource path="res://src/states/Fallen.gd" type="Script" id=6]
[ext_resource path="res://src/state_machine_components/StateMachine.gd" type="Script" id=7]
[ext_resource path="res://src/states/Idle.gd" type="Script" id=8]
[ext_resource path="res://src/star/ThrowingVectorLine.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 19.0263

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 1, 0.607843, 0, 0.588235, 1, 0, 0, 0.588235 )

[node name="Star" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
dev = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 3 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="StarStateMachine" type="Node" parent="."]
script = ExtResource( 7 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StarStateMachine"]
script = ExtResource( 8 )

[node name="Throwing" type="Node" parent="StarStateMachine"]
script = ExtResource( 3 )

[node name="Flying" type="Node" parent="StarStateMachine"]
script = ExtResource( 5 )

[node name="Flailing" type="Node" parent="StarStateMachine"]
script = ExtResource( 4 )

[node name="Fallen" type="Node" parent="StarStateMachine"]
script = ExtResource( 6 )

[node name="ThrowingVectorLine" type="Line2D" parent="."]
width = 8.0
width_curve = SubResource( 4 )
gradient = SubResource( 5 )
script = ExtResource( 9 )

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
